addinng meta desc in index.html and changer some console command name in unitls/cs2commands

--- a/index.html
+++ b/index.html
@@ -4,7 +4,16 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logoFull.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WrongSettings</title>
+    <meta
+      name="description"
+      content="Save, manage and share your Counter-Strike 2 settings. Create your CS2 config profile, generate your console commands and share your setup with the community."
+    />
+    <meta
+      name="keywords"
+      content="CS2, Counter-Strike 2, config, commandes console, config generator, CS2 settings, autoexec"
+    />
+    <meta name="author" content="dylanmnr" />
+    <title>WrongSettings - CS2 settings server</title>
   </head>
   <body>
     <div id="root"></div>
